--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body background="background.jpg">
   <center>
-    <h3 id="Title" class="btn btn-Warning">Mustache Filter</h3>
+    <h3 id="Title" class="btn btn-Warning">NOOB</h3>
     <br>
     <br>
     <button id="buttontake" class="btn btn-info" onclick="take_snapshot()">Take Snapshot</button>
